diesel_compile_tests/tests/fail/boxed_queries_require_selectable_expression_for_order.rs
extern crate diesel;

use diesel::pg::Pg;
use diesel::*;

table! {
    users {
        id -> Integer,
        name -> VarChar,
    }
}

table! {
    posts {
        id -> Integer,
        title -> VarChar,
    }
}

fn main() {
    users::table.into_boxed::<Pg>().order(posts::title.desc());
}
